--- a/package.json
+++ b/package.json
@@ -21,10 +21,14 @@
     "@babel/core": "7.22.9",
     "@babel/node": "7.22.6",
     "@babel/preset-env": "7.22.9",
+    "bcrypt": "5.1.0",
     "body-parser": "1.20.2",
     "dotenv": "16.3.1",
     "ejs": "3.1.9",
     "express": "4.18.2",
-    "nodemon": "3.0.1"
+    "mysql2": "3.5.2",
+    "nodemon": "3.0.1",
+    "sequelize": "6.32.1",
+    "sequelize-cli": "6.6.1"
   }
 }
