--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "16.3.1",
     "ejs": "3.1.9",
     "express": "4.18.2",
+    "jsonwebtoken": "^9.0.1",
     "mysql2": "3.5.2",
     "nodemon": "3.0.1",
     "sequelize": "6.32.1",
